updated using position

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
 
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My learnings</p>
+            <!-- <p>My learnings</p> -->
+             <div class="Mylearning">
+                <p>My learnings</p>
+                <div class="Mylearning__popup">
+                    <p>You did not purchased anything yet</p>
+
+                </div>
+             </div>
             <i class="fa-solid fa-cart-shopping" style="color: #010813;"></i>
             <i class="fa-solid fa-bell" style="color: #010813;"></i>
             <i class="fa-solid fa-user" style="color: #020c1c;"></i>
@@ -43,6 +50,10 @@
 
     <div class="Sale-image">
         <img src="./images/sale image.jpg" alt="Sale-image">
+        <div class="sale-image__offer">
+        <h2>Udemy flash sale! 24 hours to save</h2>
+        <p>Get the top courses at just 499 rupees just one day to save but life time to learn grab the opportunity</p>
+        </div>
     </div>
 
     <div class="Recommended">
